# doc_extraction2

./: pyproject.toml
backend/: config.py  extraction_playground.ipynb
backend/functions/email-extraction/: .env.questions.example  function_app.py  requirements.txt
backend/functions/knowledge-base-ingestion/: .env.qa.example  function_app.py
backend/shared/core/: __init__.py  processor.py
backend/shared/extractors/: __init__.py
backend/shared/extractors/base/: __init__.py  config.py  interfaces.py  models.py  utils.py
backend/shared/extractors/qa/: context_aware.py  simple.py
backend/shared/extractors/question/: context_aware.py  models.py  simple_llm.py
backend/shared/extractors/structure/: structure_aware.py
backend/shared/llm/: __init__.py  client.py  factory.py
backend/shared/models/: converters.py  db_models.py  document_record.py  enums.py  models_semantic.py
backend/shared/models/db/: base.py  chunk.py  document.py  rfp.py
backend/shared/models/pydantic/: __init__.py  answer.py  rfp.py  (+1 more)
backend/shared/parsers/: __init__.py  azure_parser.py  base.py  factory.py  pymupdf_parser.py
data/ground_truth/: rfp_email.json  rfp_market.json
rfp-extraction/: .env.example  .gitignore  extraction_playground.ipynb  foo.ipynb  function_app.py  init_database_azure.py  pyproject.toml
rfp-extraction/shared/: __init__.py
rfp-extraction/shared/core/: processor.py
rfp-extraction/shared/extractors/: factory.py
rfp-extraction/shared/models/: converters.py  db_models.py
rfp-extraction/shared/services/: db.py  doc_intelligence.py  document_record.py
(+16 files in other folders)
